src/components/ProjectPreview.css
.card-preview {
    position: relative;
    padding: 0.4rem;
    aspect-ratio: 16 / 10;
}

.card-media img,
.card-media video {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card-media img,
.card-media .video-container {
    animation: fadeIn 0.4s;
}

.card-media .mini-controls {
    position: absolute;
    left: 50%;
    bottom: 0.6rem;
    translate: -50%;
}

.card-media.expanded {
    display: flex;
    gap: 1rem;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 1rem;
    z-index: 10;
    animation: fadeIn 0.4s;
}

.card-media.expanded img,
.card-media.expanded .video-container {
    width: auto;
    height: auto;
    margin: auto;
    max-width: 100%;
    max-height: 80%;
}

.card-media.expanded .video-container {
    position: relative;
}

.card-media.expanded .mini-controls {
    position: initial;
    translate: initial;
}

.card-media.expanded img,
.card-media.expanded .video-container,
.card-media.expanded .mini-controls,
.card-media.expanded .thumbnail {
    box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
}

.expanded-bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #00000075;
    backdrop-filter: blur(3px);
    z-index: -1;
}

